--- a/generators/templates/Component.tsx.hbs
+++ b/generators/templates/Component.tsx.hbs
@@ -1,8 +1,8 @@
 import * as S from './styles'
 
-const {{pascalCase name}} = ({ title='{{pascalCase name}} Title' }) => (
+const {{pascalCase name}} = () => (
   <S.Wrapper>
-    <h1>{title}</h1>
+    <h1>{{pascalCase name}}</h1>
   </S.Wrapper>
 )
 
